# pyZonae

./: NOTICE  README.md  pyproject.toml  requirements.txt
pyzonae/: __init__.py  classify.py  cli.py  cmaps.py  decision_space.py  derive.py  diagrams.py  holdridge_triangle.py  io.py  legend_grid.py  orbital.py  plotting.py  plotting_holdridge.py  run.py  thornthwaite.py  whittaker_diagram.py
pyzonae/classifiers/: defaut.py  holdridge.py  koeppen.py  thornfeddema.py  whittaker.py  whittaker_data.py
scripts/: classify_map.py  make_readme_figures.py  make_synthetic_data.py
tests/: __init__.py  test_pipeline.py
